--- a/index.html
+++ b/index.html
@@ -168,14 +168,22 @@
                 <div class='startagain'>Start again</div>
                 <button class='add'>Add the candle</button>
                 <button class='sa'>Start again</button>
+                <div class="wish">
+                    <p style="font-size: 25px; color: #e77572;">Happy Birthday! Wishing Linh lots of joy, good health,
+                        and success!</p>
+                    <p>I really enjoy the simple and interesting stories you share. They always bring joy and help me
+                        relax after a long day at work.</p>
+                    <p>I know this period is really stressful, but no matter the outcome, I know you've given it your
+                        all and that's what truly matters.</p>
+                    <p>You are who you are - unique and amazing in your own way. Wishing you happiness and that all your
+                        dreams come true.</p>
+                </div>
             </div>
         </div>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-    <script src="./script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+        <script src="./script.js"></script>
 </body>
 
 </html>
