--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <button class='add'>Add the candle</button>
                 <button class='sa'>Start again</button>
                 <div class="wish">
-                    <p style="font-size: 25px; color: #e77572;">Happy Birthday! Wishing Linh lots of joy, good health,
+                    <p style="font-size: 25px; color: #e77572;">Wishing Linh lots of joy, good health,
                         and success!</p>
                     <p>I really enjoy the simple and interesting stories you share. They always bring joy and help me
                         relax after a long day at work.</p>
