--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+
     <title>Happy Birthday Card || Learningrobo</title>
 </head>
 
 <body>
+    <img src="./imgs/a.png" alt="a" class="random-image">
+    <img src="./imgs/b.png" alt="b" class="random-image">
+    <img src="./imgs/c.png" alt="c" class="random-image">
+    <img src="./imgs/d.png" alt="d" class="random-image">
+    <img src="./imgs/e.png" alt="e" class="random-image">
     <div class='birthday'>
         <div class='birthday_inner'>
             <div class='birthday_inner__modal'>
@@ -55,6 +61,7 @@
                 </div>
             </div>
             <div class='birthday_inner__stage stage4'>
+
                 <h1>Let’s make the cake</h1>
                 <h2>Build your cake in any order you want. Click an ingredient to add it to your cake. You can add more
                     than one item e.g 2 vanilla sponges but only 5 bases and 6 fillings. Hit the button at the bottom to
